# Chip8Emu

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yaml
include/: cpu.h  gpu.h  hw.h  input.h  roms.h  sound.h
src/: cpu.cpp  gpu.cpp  input.cpp  main.cpp  sound.cpp
tools/: create_beep_sound.py  generate_rom_header.py
